NLA tracks cannot be renamed from outliner #111067

Closed
opened 2023-08-12 13:50:58 +02:00 by Albert-OShea · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 517.48

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-11 21:47, hash: cf5666345d20

Short description of error
In the outliner, If you expand an object's Animation tree, then expand the NLA Tracks tree, it will expose its NLA tracks. If you try to double click one of these tracks to rename it, it doesn't work, and the logged warning states that you 'Cannot edit external library data'. The NLA track in question is not externally linked data.
Actions are renamable from the outliner, so I'd think NLA tracks should be too.

Exact steps for others to reproduce the error

  • Download attached blend file.
  • In the outliner, expand the data tree of Cube to access the NLA track.
    Screenshot 2023-08-12 214755.png
  • Double click circled item to try to rename.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 517.48 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-11 21:47, hash: `cf5666345d20` **Short description of error** In the outliner, If you expand an object's Animation tree, then expand the NLA Tracks tree, it will expose its NLA tracks. If you try to double click one of these tracks to rename it, it doesn't work, and the logged warning states that you 'Cannot edit external library data'. The NLA track in question is not externally linked data. Actions are renamable from the outliner, so I'd think NLA tracks should be too. **Exact steps for others to reproduce the error** - Download attached blend file. - In the outliner, expand the data tree of Cube to access the NLA track. ![Screenshot 2023-08-12 214755.png](/attachments/0f718f03-7221-4dd4-8061-07503855b693) - Double click circled item to try to rename.
Albert-OShea added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-12 13:50:59 +02:00
Member

Can confirm. It prompted "Can not edit external library data" upon renaming which it really isn't.

Can confirm. It prompted "Can not edit external library data" upon renaming which it really isn't.
YimingWu added
Module
User Interface
Status
Confirmed
Interest
User Interface
and removed
Status
Needs Triage
labels 2023-08-12 14:17:17 +02:00
Member

Also note that the Outliner may or may not include Strips (depending on whether you are in Data API view or not). If it doesnt, it places the Actions right below the Tracks (which is a bit awkward I think)

image
image

Also note that the Outliner may or may not include Strips (depending on whether you are in Data API view or not). If it doesnt, it places the Actions right below the Tracks (which is a bit awkward I think) ![image](/attachments/aa917fef-7858-466a-8744-66a67cf55c6e) ![image](/attachments/42b92f47-d4ab-4d86-9898-e9d06dadbf4b)
Member

Got a fix, will do some double-checking and post a PR shortly

Got a fix, will do some double-checking and post a PR shortly
Philipp Oeser self-assigned this 2023-08-14 10:57:06 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-14 15:27:29 +02:00
Member

@lichtwerk hi, can we include your fix in 3.6LTS? :)

@lichtwerk hi, can we include your fix in 3.6LTS? :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111067
No description provided.