source/blender/editors/space_outliner/outliner_edit.cc
@@ -336,10 +336,10 @@ static void do_item_rename(ARegion *region,
   else if (ELEM(tselem->type, TSE_SEQUENCE, TSE_SEQ_STRIP, TSE_SEQUENCE_DUP)) {
     BKE_report(reports, RPT_WARNING, "Cannot edit sequence name");
   }
-  else if (ID_IS_LINKED(tselem->id)) {
+  else if (TSE_IS_REAL_ID(tselem) && ID_IS_LINKED(tselem->id)) {
     BKE_report(reports, RPT_WARNING, "Cannot edit external library data");
   }
-  else if (ID_IS_OVERRIDE_LIBRARY(tselem->id)) {
+  else if (TSE_IS_REAL_ID(tselem) && ID_IS_OVERRIDE_LIBRARY(tselem->id)) {
     BKE_report(reports, RPT_WARNING, "Cannot edit name of an override data-block");
   }
   else if (outliner_is_collection_tree_element(te)) {
